# MoodEngine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.ps1  performance_baseline.csv
.github/workflows/: build.yml  release.yml
assets/characters/: README.md
assets/characters/npc/: anim_look_around.fbx  anim_talk.fbx  npc.fbx
assets/characters/player/: anim_idle.fbx  anim_walk.fbx  anim_wave.fbx  player.fbx
assets/dialogs/: demo_intro.mooddialog
assets/i18n/: en.json  es.json
assets/items/: Daga.mooditem  health_potion.mooditem  iron_sword.mooditem  metal sword.mooditem  mysterious_key.mooditem
assets/luts/: README.md
assets/maps/: narrative_demo.moodmap  physics_joints_demo.moodmap  ragdoll_demo.moodmap  vehicle_demo.moodmap
assets/materials/: acero_pulido.material  caucho_negro.material  cobre_rugoso.material  mood_test_save_no_textures_1353751864932800.material  oro_pulido.material  plastico_azul.material
assets/meshes/: cube_mtl.mtl
assets/prefabs/: Tile_6_7.moodprefab  sample_light.moodprefab
assets/quests/: quest_demo.moodquest
assets/scripts/: hud_demo.lua  inventory_demo.lua  quest_demo.lua  ragdoll_demo.lua  rotator.lua  trigger_demo.lua
assets/shaders/graphs/: sample_glass.moodshader  sample_gold.moodshader  sample_hologram.moodshader  sample_water.moodshader
assets/ui/: hud.rcss  hud.rml  pause_menu.rcss  pause_menu.rml
assets/vehicles/banshee_sa/: banshee_sa.moodvehicle
cmake/: CPM.cmake  CompilerWarnings.cmake
docs/: ARCHITECTURE.md  BACKLOG.md  CODING_STYLE.md  CONTRIBUTING.md  DECISIONS.md  ESTADO_ACTUAL.md  F2H2_BENCHMARK_INSTRUCTIONS.md  HANDOFF_F2H52_TOUR.md  HITOS.md  MOODENGINE_CONTEXTO_TECNICO.md  PENDIENTES.md  PERFORMANCE.md  PLAN_FASE2.md  PLAN_HITO10.md  PLAN_HITO11.md  PLAN_HITO12.md  PLAN_HITO13.md  PLAN_HITO14.md  PLAN_HITO15.md  PLAN_HITO16.md  PLAN_HITO18.md  PLAN_HITO19.md  PLAN_HITO2.md  PLAN_HITO20.md  PLAN_HITO21.md  PLAN_HITO22.md  PLAN_HITO23.md  PLAN_HITO24.md  PLAN_HITO25.md  PLAN_HITO26.md  PLAN_HITO27.md  PLAN_HITO28.md  PLAN_HITO29.md  PLAN_HITO3.md  PLAN_HITO30.md  PLAN_HITO31.md  PLAN_HITO32.md  PLAN_HITO33.md  PLAN_HITO34.md  PLAN_HITO35.md  (+29 more)
docs/archive/: DECISIONS_Fase1.md  ESTADO_HISTORICO.md  HITOS_Fase1.md
docs/archive/plans/: PLAN_HITO10.md  PLAN_HITO11.md  PLAN_HITO12.md  PLAN_HITO14.md  PLAN_HITO16.md  PLAN_HITO17.md  PLAN_HITO19.md  PLAN_HITO20.md  PLAN_HITO21.md  PLAN_HITO24.md  PLAN_HITO26.md  PLAN_HITO28.md  PLAN_HITO29.md  PLAN_HITO3.md  PLAN_HITO30.md  PLAN_HITO32.md  PLAN_HITO34.md  PLAN_HITO38.md  PLAN_HITO39.md  PLAN_HITO4.md  PLAN_HITO40.md  PLAN_HITO41.md  PLAN_HITO42.md  PLAN_HITO5.md  PLAN_HITO7.md  PLAN_HITO_AUDIT_1.md  PLAN_HITO_AUDIT_2.md  PLAN_HITO_F2H12.md  PLAN_HITO_F2H13.md  PLAN_HITO_F2H14.md  PLAN_HITO_F2H15.md  PLAN_HITO_F2H16.md  PLAN_HITO_F2H17.md  PLAN_HITO_F2H18.md  (+34 more)
docs/audits/: AUDIT_1.md  AUDIT_2.md  AUDIT_3.md
docs/hitos/: F2H55.md  F2H56.md  F2H57.md  F2H58.md  F2H59.md  F2H60.md  F2H61.md  F2H62.md  F2H63.md  F2H64.md  F2H65.md  F2H66.md  F2H67.md  README.md
shaders/: bloom.vert  bloom_composite.frag  bloom_downsample.frag  bloom_upsample.frag  color_grading.frag  debug_line.frag  debug_line.vert  default.frag  default.vert  grid2d.frag  grid2d.vert  lit.frag  lit.vert  oit_composite.frag  particle.frag  particle.vert  pbr.frag  pbr.vert  pbr_graph_template.frag  pbr_instanced.vert  pbr_skinned.vert  post_process.frag  post_process.vert  shadow_depth.frag  shadow_depth.vert  shadow_tinted.frag  shadow_tinted.vert  skybox.frag  skybox.vert  skybox_equirect.frag  ssao.frag  ssao.vert  ssao_blur.frag  ssao_composite.frag  ssr.frag  ui.frag  ui.vert  wireframe_ortho.frag  wireframe_ortho.vert
src/: main.cpp
src/core/: Assert.h  Log.cpp  Log.h  LogRingSink.cpp  LogRingSink.h  Profiler.h  Time.cpp  Time.h  Types.h  UserSettings.cpp  UserSettings.h
src/editor/: DemoSpawners.cpp  Dockspace.cpp  Dockspace.h  EditorApplication.cpp  EditorApplication.h  EditorMode.h  EditorOverlay.cpp  EditorPlayMode.cpp  EditorProjectActions.cpp  EditorRenderPass.cpp  EditorScene.cpp  EditorUI.cpp  EditorUI.h  MenuBar.cpp  StatusBar.cpp  StatusBar.h
src/platform/: VFS.cpp  VFS.h  Window.cpp  Window.h
src/player/: PlayerApplication.cpp  PlayerApplication.h  PlayerApplication_Frame.cpp  PlayerApplication_Init.cpp  PlayerApplication_SaveLoad.cpp  main.cpp
src/systems/: AnimationSystem.cpp  AnimationSystem.h  AudioSystem.cpp  AudioSystem.h  GridRenderer.cpp  GridRenderer.h  LightSystem.cpp  LightSystem.h  NavSystem.cpp  NavSystem.h  ParticleSystem.cpp  PhysicsSystem.cpp  PhysicsSystem.h  PostProcessPass.cpp  ScriptSystem.cpp  ScriptSystem.h  ShadowPass.cpp  ShadowPass.h  SkyboxRenderer.cpp  SkyboxRenderer.h  TriggerSystem.cpp  TriggerSystem.h
tests/: CMakeLists.txt  test_aabb.cpp  test_add_component_command.cpp  test_animation.cpp  test_asset_manager.cpp  test_audio.cpp  test_brush_persistence.cpp  test_cameras.cpp  test_character_controller.cpp  test_collision.cpp  test_compile_map.cpp  test_compiled_mesh_persistence.cpp  test_create_entity_command.cpp  test_csg_brush.cpp  test_csg_brush_ops.cpp  test_csg_pick_face.cpp  test_csg_primitives.cpp  test_delete_entity_command.cpp  test_dialog_asset.cpp  test_dialog_script_host.cpp  test_dialog_system.cpp  test_dialog_validator.cpp  test_edit_brush_face_material_command.cpp  test_edit_brush_material_command.cpp  test_edit_brush_uv_command.cpp  test_edit_mesh_renderer_material_command.cpp  test_edit_property_command.cpp  test_edit_script_component_command.cpp  test_edit_transform_command.cpp  test_exposed_properties.cpp  test_fog.cpp  test_frustum.cpp  test_game_state.cpp  test_grid.cpp  test_hierarchy_collect.cpp  test_history_stack.cpp  test_i18n.cpp  test_inventory_state.cpp  test_item_asset.cpp  test_item_pickup_system.cpp  (+52 more)
tools/: bake_brdf_lut.py  bake_ibl.py  gen_beep_audio.py  gen_brick_texture.py  gen_grid_texture.py  gen_luts.py  gen_missing_audio.py  gen_missing_texture.py  gen_particle_textures.py  gen_sky_cubemap.py  hdr_to_equirect_png.py  sizeometer.sh
(+481 files in other folders)
